# david

./: .gitignore  README_SETUP.md
.github/workflows/: build-dmg.yml
david-api/: main.py  requirements.txt
david-app/: auth.html  orb.html  package.json  vite.config.ts
david-app/src/: auth.tsx  main.tsx
david-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
david-app/src-tauri/capabilities/: default.json
david-app/src-tauri/src/: activity_tracker.rs  audio_detector.rs  backend_client.rs  fish_speech.rs  lib.rs  main.rs  screen_capture.rs  wake_word.rs
david-app/src-tauri/src/commands/: david.rs  mod.rs
david-app/src/components/: AuthScreen.tsx  DavidOrb.tsx
website/: index.html
